employee-app/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
spec:
  rules:
#--------------------------------------------------------#
#----------- CONFIGURACION [employee-service] -----------#
#--------------------------------------------------------#
  - host: capacitacion.microservicios.employee
    http:
      paths:
      #PARA 'SWAGGER':
      - path: "/"
        backend:
          serviceName: employee-service
          servicePort: 8080
         
      - path: "/employeeservice/get"
        backend:
          serviceName: employee-service
          servicePort: 8080

      - path: "/employeeservice/post"
        backend:
          serviceName: employee-service
          servicePort: 8080

      - path: "/employeeservice/delete"
        backend:
          serviceName: employee-service
          servicePort: 8080
 
      - path: "/actuator"
        backend:
          serviceName: employee-service
          servicePort: 8080

      - path: "/actuator/prometheus"
        backend:
          serviceName: employee-service
          servicePort: 8080

      - path: "/actuator/health"
        backend:
          serviceName: employee-service
          servicePort: 8080
